--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
               <div class="row">
                 <div class="col">
                   <h5 class="card-title text-uppercase text-muted mb-0">Cases</h5>
-                  <span class="h2 font-weight-bold mb-0">{{currentUpdate.cases}}</span>
+                  <span class="h2 font-weight-bold mb-0">{{update.cases}}</span>
                 </div>
                 <div class="col-auto">
                   <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
