--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -12,83 +12,6 @@
               <div class="row">
                 <div class="col">
                   <h5 class="card-title text-uppercase text-muted mb-0">Cases</h5>
-                  <span class="h2 font-weight-bold mb-0">{{update.cases}}</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
-                    <i class="fas fa-chart-bar"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Deaths</h5>
-                  <span class="h2 font-weight-bold mb-0">{{currentUpdate.deaths}}</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
-                    <i class="fas fa-chart-pie"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Recovered</h5>
-                  <span class="h2 font-weight-bold mb-0">{{currentUpdate.recovered}}</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
-                    <i class="fas fa-users"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--<div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">India</h5>
-                  <span class="h2 font-weight-bold mb-0">49,65</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-info text-white rounded-circle shadow">
-                    <i class="fas fa-percent"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>-->
-      </div>
-
-      <br><br>
-
-      <div class="container-fluid">
-        <h2 style="color: white"><strong>Status in India</strong></h2>
-      </div>
-
-      <div class="row">
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Cases</h5>
                   <span class="h2 font-weight-bold mb-0">{{currentUpdate.cases}}</span>
                 </div>
                 <div class="col-auto">
@@ -97,6 +20,10 @@
                   </div>
                 </div>
               </div>
+              <p class="mt-3 mb-0 text-muted text-sm">
+                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i>{{lastupdate | date:'short'}}</span>
+                <span class="text-nowrap">last Updated</span>
+              </p>
             </div>
           </div>
         </div>
@@ -109,11 +36,15 @@
                   <span class="h2 font-weight-bold mb-0">{{currentUpdate.deaths}}</span>
                 </div>
                 <div class="col-auto">
-                  <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
-                    <i class="fas fa-chart-pie"></i>
+                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <i class="fas fa-frown"></i>
                   </div>
                 </div>
               </div>
+              <p class="mt-3 mb-0 text-muted text-sm">
+                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> {{lastupdate | date:'short'}}</span>
+                <span class="text-nowrap">last Updated</span>
+              </p>
             </div>
           </div>
         </div>
@@ -126,31 +57,110 @@
                   <span class="h2 font-weight-bold mb-0">{{currentUpdate.recovered}}</span>
                 </div>
                 <div class="col-auto">
-                  <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
-                    <i class="fas fa-users"></i>
+                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <i class="fas fa-smile-beam"></i>
                   </div>
                 </div>
               </div>
+              <p class="mt-3 mb-0 text-muted text-sm">
+                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i>{{lastupdate | date:'short'}}</span>
+                <span class="text-nowrap">last Updated</span>
+              </p>
             </div>
           </div>
         </div>
-        <!--<div class="col-xl-3 col-lg-6">
+      </div>
+
+      <br><br>
+
+      <div class="container-fluid">
+        <h2 style="color: white"><strong>India Status Update</strong></h2>
+      </div>
+      <div class="row">
+        <div class="col-xl-3 col-lg-6">
           <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">India</h5>
-                  <span class="h2 font-weight-bold mb-0">49,65</span>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Cases</h5>
+                  <span class="h2 font-weight-bold mb-0">{{indiastatus.cases}}</span>
                 </div>
                 <div class="col-auto">
-                  <div class="icon icon-shape bg-info text-white rounded-circle shadow">
-                    <i class="fas fa-percent"></i>
+                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <i class="fas fa-chart-bar"></i>
                   </div>
                 </div>
               </div>
+              <p class="mt-3 mb-0 text-muted text-sm">
+                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> {{lastupdate | date:'short'}}</span>
+                <span class="text-nowrap">last Updated</span>
+              </p>
             </div>
           </div>
-        </div>-->
+        </div>
+        <div class="col-xl-3 col-lg-6">
+          <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title text-uppercase text-muted mb-0">Deaths</h5>
+                  <span class="h2 font-weight-bold mb-0">{{indiastatus.deaths}}</span>
+                </div>
+                <div class="col-auto">
+                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <i class="fas fa-frown"></i>
+                  </div>
+                </div>
+              </div>
+              <p class="mt-3 mb-0 text-muted text-sm">
+                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> {{lastupdate | date:'short'}}</span>
+                <span class="text-nowrap">last Updated</span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-3 col-lg-6">
+          <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title text-uppercase text-muted mb-0">Recovered</h5>
+                  <span class="h2 font-weight-bold mb-0">{{indiastatus.recovered}}</span>
+                </div>
+                <div class="col-auto">
+                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <i class="fas fa-smile-beam"></i>
+                  </div>
+                </div>
+              </div>
+              <p class="mt-3 mb-0 text-muted text-sm">
+                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> {{lastupdate | date:'short'}}</span>
+                <span class="text-nowrap">last Updated</span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-3 col-lg-6">
+          <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title text-uppercase text-muted mb-0">Active</h5>
+                  <span class="h2 font-weight-bold mb-0">{{indiastatus.active}}</span>
+                </div>
+                <div class="col-auto">
+                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <i class="fas fa-smile-beam"></i>
+                  </div>
+                </div>
+              </div>
+              <p class="mt-3 mb-0 text-muted text-sm">
+                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> {{lastupdate | date:'short'}}</span>
+                <span class="text-nowrap">last Updated</span>
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
