--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
   <div class="container-fluid">
     <div class="header-body">
+
       <!-- Card stats -->
       <div class="container-fluid">
         <h2 style="color: white"><strong>Global Current Update</strong></h2>
@@ -160,6 +161,58 @@
               </p>
             </div>
           </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+<div class="container-fluid mt--7">
+  <div class="row">
+    <div class="col-xl-8 mb-5 mb-xl-0">
+      <div class="card shadow">
+        <div class="table-responsive">
+          <table id="example" class=" display table align-items-center table-flush" cellspacing="0" width="100%">
+            <thead class="thead-light">
+            <tr>
+              <th scope="col">Country</th>
+              <th scope="col">Cases</th>
+              <th scope="col">Today Cases</th>
+              <th scope="col">Deaths</th>
+              <th scope="col">Today Deaths</th>
+              <th scope="col">Recovered</th>
+              <th scope="col">Active</th>
+              <th scope="col">Critical</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr  *ngFor="let items in globalupdate">
+              <td>{{items.country}}</td>
+              <td>{{items.cases}}</td>
+              <td>{{items.todayCases}}</td>
+              <td>{{items.deaths}}</td>
+              <td>{{items.todayDeaths}}</td>
+              <td>{{items.recovered}}</td>
+              <td>{{items.active}}</td>
+              <td>{{items.critical}}</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-4">
+      <div class="card shadow">
+        <div class="card-header bg-transparent">
+          <div class="row align-items-center">
+            <div class="col">
+              <h6 class="text-uppercase text-muted ls-1 mb-1">Performance</h6>
+              <h2 class="mb-0">Total orders</h2>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <a class="twitter-timeline" href="https://twitter.com/WHO?ref_src=twsrc%5Etfw">Tweets by WHO</a>
         </div>
       </div>
     </div>
