--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -172,7 +172,7 @@
     <div class="col-xl-8 mb-5 mb-xl-0">
       <div class="card shadow">
         <div class="table-responsive">
-          <table id="example" class=" display table align-items-center table-flush" cellspacing="0" width="100%">
+         <!-- <table class="table align-items-center table-flush">
             <thead class="thead-light">
             <tr>
               <th scope="col">Country</th>
@@ -186,15 +186,42 @@
             </tr>
             </thead>
             <tbody>
-            <tr  *ngFor="let items in globalupdate">
-              <td>{{items.country}}</td>
-              <td>{{items.cases}}</td>
-              <td>{{items.todayCases}}</td>
-              <td>{{items.deaths}}</td>
-              <td>{{items.todayDeaths}}</td>
-              <td>{{items.recovered}}</td>
-              <td>{{items.active}}</td>
-              <td>{{items.critical}}</td>
+            <tr *ngFor="let value of globalupdate">
+              <td>{{value.country}}</td>
+              <td>{{value.cases}}</td>
+              <td>{{value.todayCases}}</td>
+              <td>{{value.deaths}}</td>
+              <td>{{value.todayDeaths}}</td>
+              <td>{{value.recovered}}</td>
+              <td>{{value.active}}</td>
+              <td>{{value.critical}}</td>
+            </tr>
+            </tbody>
+          </table>-->
+
+          <table datatable [dtOptions]="dtOptions" class="table align-items-center table-flush">
+            <thead>
+            <tr>
+              <th scope="col">Country</th>
+              <th scope="col">Cases</th>
+              <th scope="col">Today Cases</th>
+              <th scope="col">Deaths</th>
+              <th scope="col">Today Deaths</th>
+              <th scope="col">Recovered</th>
+              <th scope="col">Active</th>
+              <th scope="col">Critical</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let stats of globalupdate">
+              <td>{{stats.country}}</td>
+              <td>{{stats.cases}}</td>
+              <td>{{stats.todayCases}}</td>
+              <td>{{stats.deaths}}</td>
+              <td>{{stats.todayDeaths}}</td>
+              <td>{{stats.recovered}}</td>
+              <td>{{stats.active}}</td>
+              <td>{{stats.critical}}</td>
             </tr>
             </tbody>
           </table>
@@ -212,7 +239,7 @@
           </div>
         </div>
         <div class="card-body">
-          <a class="twitter-timeline" href="https://twitter.com/WHO?ref_src=twsrc%5Etfw">Tweets by WHO</a>
+
         </div>
       </div>
     </div>
