--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -172,32 +172,32 @@
     <div class="col-xl-8 mb-5 mb-xl-0">
       <div class="card shadow">
         <div class="table-responsive">
-         <!-- <table class="table align-items-center table-flush">
-            <thead class="thead-light">
-            <tr>
-              <th scope="col">Country</th>
-              <th scope="col">Cases</th>
-              <th scope="col">Today Cases</th>
-              <th scope="col">Deaths</th>
-              <th scope="col">Today Deaths</th>
-              <th scope="col">Recovered</th>
-              <th scope="col">Active</th>
-              <th scope="col">Critical</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let value of globalupdate">
-              <td>{{value.country}}</td>
-              <td>{{value.cases}}</td>
-              <td>{{value.todayCases}}</td>
-              <td>{{value.deaths}}</td>
-              <td>{{value.todayDeaths}}</td>
-              <td>{{value.recovered}}</td>
-              <td>{{value.active}}</td>
-              <td>{{value.critical}}</td>
-            </tr>
-            </tbody>
-          </table>-->
+          <!-- <table class="table align-items-center table-flush">
+             <thead class="thead-light">
+             <tr>
+               <th scope="col">Country</th>
+               <th scope="col">Cases</th>
+               <th scope="col">Today Cases</th>
+               <th scope="col">Deaths</th>
+               <th scope="col">Today Deaths</th>
+               <th scope="col">Recovered</th>
+               <th scope="col">Active</th>
+               <th scope="col">Critical</th>
+             </tr>
+             </thead>
+             <tbody>
+             <tr *ngFor="let value of globalupdate">
+               <td>{{value.country}}</td>
+               <td>{{value.cases}}</td>
+               <td>{{value.todayCases}}</td>
+               <td>{{value.deaths}}</td>
+               <td>{{value.todayDeaths}}</td>
+               <td>{{value.recovered}}</td>
+               <td>{{value.active}}</td>
+               <td>{{value.critical}}</td>
+             </tr>
+             </tbody>
+           </table>-->
 
           <table datatable [dtOptions]="dtOptions" class="table align-items-center table-flush">
             <thead>
@@ -233,13 +233,17 @@
         <div class="card-header bg-transparent">
           <div class="row align-items-center">
             <div class="col">
-              <h6 class="text-uppercase text-muted ls-1 mb-1">Performance</h6>
-              <h2 class="mb-0">Total orders</h2>
+              <h6 class="text-uppercase text-muted ls-1 mb-1">Notes:</h6>
+              <h2 class="mb-0">Important Updates</h2>
             </div>
           </div>
         </div>
         <div class="card-body">
-
+          <div class="container-fluid">
+            <a href="https://api.whatsapp.com/send?phone=41798931892&text=hi&source=&data=" target="_blank">
+              <img class="who-img" src="../../../assets/img/content/who-covid19-02-v1-v1.jpg">
+            </a>
+          </div>
         </div>
       </div>
     </div>
