--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -1,13 +1,4 @@
-/*
-   server-side-angular-way.component.css
-*/
-.no-data-available {
-  text-align: center;
-}
-
-/*
-   src/styles.css (i.e. your global style)
-*/
-.dataTables_empty {
-  display: none;
+.who-img{
+  width: inherit;
+  //352px
 }
