fire base integration and  image responsive

--- a/src/app/pages/how-to-protect/how-to-protect.component.html
+++ b/src/app/pages/how-to-protect/how-to-protect.component.html
@@ -9,7 +9,7 @@
           <div>
             <h3 class="design  display-4">Know How it Spreads</h3>
             <div class="row">
-              <div class="col-3"><img src="../../../assets/img/content/sneezingwoman.png"></div>
+              <div class="col-3"><img class="img-thumbnail" src="../../../assets/img/content/sneezingwoman.png"></div>
               <div class="col-9">
                 <ul>
                   <li>There is currently no vaccine to prevent coronavirus disease 2019 (COVID-19).</li>
@@ -30,7 +30,7 @@
           <div>
             <h3 class="design  display-4">Take steps to protect yourself</h3>
             <div class="row">
-              <div class="col-3"><img src="../../../assets/img/content/protect-wash-hands.png"></div>
+              <div class="col-3"><img class="img-thumbnail"  src="../../../assets/img/content/protect-wash-hands.png"></div>
               <div class="col-9">
                 <h3>Clean your hands often</h3>
                 <ul>
@@ -48,7 +48,7 @@
           </div>
           <div class="design">
             <div class="row">
-              <div class="col-3"><img src="../../../assets/img/content/protect-quarantine.png"></div>
+              <div class="col-3"><img class="img-thumbnail"  src="../../../assets/img/content/protect-quarantine.png"></div>
               <div class="col-9">
                 <h3>Avoid close contact</h3>
                 <ul>
@@ -66,7 +66,7 @@
           <div>
             <h3 class="design  display-4">Take steps to protect others</h3>
             <div class="row">
-              <div class="col-3"><img src="../../../assets/img/content/COVIDweb_02_bed.png"></div>
+              <div class="col-3"><img class="img-thumbnail"  src="../../../assets/img/content/COVIDweb_02_bed.png"></div>
               <div class="col-9">
                 <h3>Stay home if you’re sick</h3>
                 <ul>
@@ -80,7 +80,7 @@
           </div>
           <div class="design">
             <div class="row">
-              <div class="col-3"><img src="../../../assets/img/content/COVIDweb_06_coverCough.png"></div>
+              <div class="col-3"><img class="img-thumbnail"  src="../../../assets/img/content/COVIDweb_06_coverCough.png"></div>
               <div class="col-9">
                 <h3>Cover coughs and sneezes</h3>
                 <ul>
@@ -98,7 +98,7 @@
           </div>
           <div class="design">
             <div class="row">
-              <div class="col-3"><img src="../../../assets/img/content/COVIDweb_05_mask.png"></div>
+              <div class="col-3"><img class="img-thumbnail"   src="../../../assets/img/content/COVIDweb_05_mask.png"></div>
               <div class="col-9">
                 <h3>Wear a facemask if you are sick</h3>
                 <ul>
@@ -121,7 +121,7 @@
           </div>
           <div class="design">
             <div class="row">
-              <div class="col-3"><img src="../../../assets/img/content/COVIDweb_09_clean.png"></div>
+              <div class="col-3"><img class="img-thumbnail"  src="../../../assets/img/content/COVIDweb_09_clean.png"></div>
               <div class="col-9">
                 <h3>Clean and disinfect</h3>
                 <ul>
