--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -2,210 +2,47 @@
   <div class="container-fluid">
     <div class="header-body">
       <div class="card">
+        <div class="row">
 
 
-        <div class="container cta-100 ">
-          <div class="container">
-            <div class="row blog">
-              <div class="col-md-12">
-                <div id="blogCarousel" class="carousel slide container-blog" data-ride="carousel">
-                  <ol class="carousel-indicators">
-                    <li data-target="#blogCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#blogCarousel" data-slide-to="1"></li>
-                  </ol>
-                  <!-- Carousel items -->
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <div class="row">
-                        <div class="col-md-4" >
-                          <div class="item-box-blog">
-                            <div class="item-box-blog-image">
-                              <!--Date-->
-                              <div class="item-box-blog-date bg-blue-ui white"> <span class="mon">Augu 01</span> </div>
-                              <!--Image-->
-                              <figure> <img alt="" src="https://cdn.pixabay.com/photo/2017/02/08/14/25/computer-2048983_960_720.jpg"> </figure>
-                            </div>
-                            <div class="item-box-blog-body">
-                              <!--Heading-->
-                              <div class="item-box-blog-heading">
-                                <a href="#" tabindex="0">
-                                  <h5>News Title</h5>
-                                </a>
-                              </div>
-                              <!--Data-->
-                              <div class="item-box-blog-data" style="padding: px 15px;">
-                                <p><i class="fa fa-user-o"></i> Admin, <i class="fa fa-comments-o"></i> Comments(3)</p>
-                              </div>
-                              <!--Text-->
-                              <div class="item-box-blog-text">
-                                <p>Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor.</p>
-                              </div>
-                              <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">read more</a> </div>
-                              <!--Read More Button-->
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-md-4" >
-                          <div class="item-box-blog">
-                            <div class="item-box-blog-image">
-                              <!--Date-->
-                              <div class="item-box-blog-date bg-blue-ui white"> <span class="mon">Augu 01</span> </div>
-                              <!--Image-->
-                              <figure> <img alt="" src="https://cdn.pixabay.com/photo/2017/02/08/14/25/computer-2048983_960_720.jpg"> </figure>
-                            </div>
-                            <div class="item-box-blog-body">
-                              <!--Heading-->
-                              <div class="item-box-blog-heading">
-                                <a href="#" tabindex="0">
-                                  <h5>News Title</h5>
-                                </a>
-                              </div>
-                              <!--Data-->
-                              <div class="item-box-blog-data" style="padding: px 15px;">
-                                <p><i class="fa fa-user-o"></i> Admin, <i class="fa fa-comments-o"></i> Comments(3)</p>
-                              </div>
-                              <!--Text-->
-                              <div class="item-box-blog-text">
-                                <p>Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor.</p>
-                              </div>
-                              <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">read more</a> </div>
-                              <!--Read More Button-->
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-md-4" >
-                          <div class="item-box-blog">
-                            <div class="item-box-blog-image">
-                              <!--Date-->
-                              <div class="item-box-blog-date bg-blue-ui white"> <span class="mon">Augu 01</span> </div>
-                              <!--Image-->
-                              <figure> <img alt="" src="https://cdn.pixabay.com/photo/2017/02/08/14/25/computer-2048983_960_720.jpg"> </figure>
-                            </div>
-                            <div class="item-box-blog-body">
-                              <!--Heading-->
-                              <div class="item-box-blog-heading">
-                                <a href="#" tabindex="0">
-                                  <h5>News Title</h5>
-                                </a>
-                              </div>
-                              <!--Data-->
-                              <div class="item-box-blog-data" style="padding: px 15px;">
-                                <p><i class="fa fa-user-o"></i> Admin, <i class="fa fa-comments-o"></i> Comments(3)</p>
-                              </div>
-                              <!--Text-->
-                              <div class="item-box-blog-text">
-                                <p>Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor.</p>
-                              </div>
-                              <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">read more</a> </div>
-                              <!--Read More Button-->
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <!--.row-->
-                    </div>
-                    <!--.item-->
-                    <div class="carousel-item ">
-                      <div class="row">
-                        <div class="col-md-4" >
-                          <div class="item-box-blog">
-                            <div class="item-box-blog-image">
-                              <!--Date-->
-                              <div class="item-box-blog-date bg-blue-ui white"> <span class="mon">Augu 01</span> </div>
-                              <!--Image-->
-                              <figure> <img alt="" src="https://cdn.pixabay.com/photo/2017/02/08/14/25/computer-2048983_960_720.jpg"> </figure>
-                            </div>
-                            <div class="item-box-blog-body">
-                              <!--Heading-->
-                              <div class="item-box-blog-heading">
-                                <a href="#" tabindex="0">
-                                  <h5>News Title</h5>
-                                </a>
-                              </div>
-                              <!--Data-->
-                              <div class="item-box-blog-data" style="padding: px 15px;">
-                                <p><i class="fa fa-user-o"></i> Admin, <i class="fa fa-comments-o"></i> Comments(3)</p>
-                              </div>
-                              <!--Text-->
-                              <div class="item-box-blog-text">
-                                <p>Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor.</p>
-                              </div>
-                              <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">read more</a> </div>
-                              <!--Read More Button-->
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-md-4" >
-                          <div class="item-box-blog">
-                            <div class="item-box-blog-image">
-                              <!--Date-->
-                              <div class="item-box-blog-date bg-blue-ui white"> <span class="mon">Augu 01</span> </div>
-                              <!--Image-->
-                              <figure> <img alt="" src="https://cdn.pixabay.com/photo/2017/02/08/14/25/computer-2048983_960_720.jpg"> </figure>
-                            </div>
-                            <div class="item-box-blog-body">
-                              <!--Heading-->
-                              <div class="item-box-blog-heading">
-                                <a href="#" tabindex="0">
-                                  <h5>News Title</h5>
-                                </a>
-                              </div>
-                              <!--Data-->
-                              <div class="item-box-blog-data" style="padding: px 15px;">
-                                <p><i class="fa fa-user-o"></i> Admin, <i class="fa fa-comments-o"></i> Comments(3)</p>
-                              </div>
-                              <!--Text-->
-                              <div class="item-box-blog-text">
-                                <p>Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor.</p>
-                              </div>
-                              <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">read more</a> </div>
-                              <!--Read More Button-->
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-md-4" >
-                          <div class="item-box-blog">
-                            <div class="item-box-blog-image">
-                              <!--Date-->
-                              <div class="item-box-blog-date bg-blue-ui white"> <span class="mon">Augu 01</span> </div>
-                              <!--Image-->
-                              <figure> <img alt="" src="https://cdn.pixabay.com/photo/2017/02/08/14/25/computer-2048983_960_720.jpg"> </figure>
-                            </div>
-                            <div class="item-box-blog-body">
-                              <!--Heading-->
-                              <div class="item-box-blog-heading">
-                                <a href="#" tabindex="0">
-                                  <h5>News Title</h5>
-                                </a>
-                              </div>
-                              <!--Data-->
-                              <div class="item-box-blog-data" style="padding: px 15px;">
-                                <p><i class="fa fa-user-o"></i> Admin, <i class="fa fa-comments-o"></i> Comments(3)</p>
-                              </div>
-                              <!--Text-->
-                              <div class="item-box-blog-text">
-                                <p>Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor.</p>
-                              </div>
-                              <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">read more</a> </div>
-                              <!--Read More Button-->
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <!--.row-->
-                    </div>
-                    <!--.item-->
-                  </div>
-                  <!--.carousel-inner-->
+          <mdb-carousel [isControls]="true" class="carousel-multi-item multi-animation" [type]="'carousel-multi-item'"
+                        [animation]="'slide'">
+            <mdb-carousel-item *ngFor="let item of slides.articles; let i = index">
+              <div class="col-md-4" [ngClass]="{'d-none d-md-block': cardIndex !== 0}"
+                   *ngFor="let card of item; let cardIndex = index">
+                <mdb-card cascade="true" narrower="true">
+                <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                  <mdb-card-img [src]="card.urlToImage" alt="no Image Found" style="width: 22px"></mdb-card-img>
+                  <a>
+                    <div class="mask rgba-white-slight"></div>
+                  </a>
                 </div>
-                <!--.Carousel-->
+
+                  <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                    <!--Card content-->
+                    <h5 class="pink-text">
+                      <mdb-icon fas icon="rss"></mdb-icon> {{card.source.name}}</h5>
+                    <!--Title-->
+                    <h4 class="card-title"><strong>{{card.title}}</strong></h4>
+                    <!--Text-->
+
+                    <mdb-card-text>{{card.description}} </mdb-card-text>
+
+                    <a  href="{{card.url}}" mdbBtn color="unique" class="waves-light" mdbWavesEffect>Read More</a>
+
+                    <!-- Card footer -->
+                    <div class="card-footer text-muted text-center mt-4">
+                      {{card.publishedAt | date:'short'}}
+                    </div>
+
+                  </mdb-card-body>
+
+                </mdb-card>
               </div>
-            </div>
-          </div>
+            </mdb-carousel-item>
+          </mdb-carousel>
+
         </div>
-
-
-
       </div>
     </div>
   </div>
