--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -176,6 +176,7 @@
             <thead>
             <tr>
               <th scope="col">Country</th>
+              <th scope="col">Flag</th>
               <th scope="col">Cases</th>
               <th scope="col">Today Cases</th>
               <th scope="col">Deaths</th>
@@ -188,6 +189,7 @@
             <tbody>
             <tr *ngFor="let stats of globalupdate">
               <td>{{stats.country}}</td>
+              <td><img src="{{stats.countryInfo.flag}}" style="width: 30px"></td>
               <td>{{stats.cases}}</td>
               <td>{{stats.todayCases}}</td>
               <td>{{stats.deaths}}</td>
