--- a/src/app/pages/india-stats/india-stats.component.html
+++ b/src/app/pages/india-stats/india-stats.component.html
@@ -226,7 +226,7 @@
         </div>
         <div class="card-body">
           <div class="container-fluid">
-            <a href="https://bit.ly/2Umyctd" target="_blank">
+            <a href="https://bit.ly/corona-tracker-india" target="_blank">
               <img class="who-img" src="../../../assets/img/icons/common/google_play.png">
             </a>
           </div>
