making img responsive

--- a/src/app/pages/india-stats/india-stats.component.html
+++ b/src/app/pages/india-stats/india-stats.component.html
@@ -227,7 +227,7 @@
         <div class="card-body">
           <div class="container-fluid">
             <a href="https://bit.ly/corona-tracker-india" target="_blank">
-              <img class="who-img" src="../../../assets/img/icons/common/google_play.png">
+              <img class="who-img img-fluid" src="../../../assets/img/icons/common/google_play.png">
             </a>
           </div>
         </div>
