Travel ALert page added

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,7 +9,11 @@
       <ul class="nav nav-footer justify-content-center justify-content-xl-end">
 
         <li class="nav-item">
-          <a href="https://github.com/creativetimofficial/argon-dashboard-angular/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
+          <a href="mailto:naveencreater106@gmail.com"><span class="text-success"><i class="far fa-paper-plane"></i></span> Report Bug / Feedback</a>
+        </li>
+        <li class="nav-item">
+          <a href="https://github.com/creativetimofficial/argon-dashboard-angular/blob/master/LICENSE.md"
+             class="nav-link" target="_blank">MIT License</a>
         </li>
       </ul>
     </div>
