--- a/src/app/pages/helpline/helpline.component.html
+++ b/src/app/pages/helpline/helpline.component.html
@@ -20,7 +20,7 @@
           </h3>
 
           <h2 class="text-white">Central Helpline Email</h2>
-          <h3 class="text-white"><a target="_blank" href="mail:ncov2019@gmail.com">ncov2019@gmail.com</a></h3>
+          <h3 class="text-white"><a target="_blank" href="mailto:ncov2019@gmail.com">ncov2019@gmail.com</a></h3>
         </div>
       </div>
     </div>
