--- a/src/app/pages/travel-alert/travel-alert.component.html
+++ b/src/app/pages/travel-alert/travel-alert.component.html
@@ -11,7 +11,7 @@
           <div class="card-box">
             <div class="form-inline"><strong>Select a Country</strong>
               <div class="form-group mx-sm-3 mb-2">
-                <input type="text" class="form-control" [(ngModel)]="selectedCountry" [ngbTypeahead]="search"/>
+                <input type="text" class="form-control" [(ngModel)]="selectedCountry" [ngbTypeahead]="search" placeholder="Enter a Country Name"/>
               </div>
             </div>
           </div>
