--- a/src/app/pages/india-stats/india-stats.component.scss
+++ b/src/app/pages/india-stats/india-stats.component.scss
@@ -3,6 +3,22 @@
   width: 70px;
 }
 
+// Custom card box
+.card-box {
+  background-color: #f6f9fc;
+  padding: 1.25rem;
+  box-shadow: 0 0.75rem 6rem rgba(56, 65, 74,.03);
+  margin-bottom: 30px;
+  //@include border-radius($card-border-radius);
+
+
+  .card-drop {
+    color: #6c757d;
+    font-size: 20px;
+    display: inline-block;
+    line-height: 1px;
+  }
+}
 
 
 .who-img {
