--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -139,6 +139,27 @@
             </div>
           </div>
         </div>
+        <div class="col-xl-3 col-lg-6">
+          <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title text-uppercase text-muted mb-0">Todays Deaths</h5>
+                  <span class="h2 font-weight-bold mb-0">{{currentUpdate.todayDeaths}}</span>
+                </div>
+                <div class="col-auto">
+                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <i class="fas fa-smile-beam"></i>
+                  </div>
+                </div>
+              </div>
+              <p class="mt-3 mb-0 text-muted text-sm">
+                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i>{{lastupdate | date:'short'}}</span>
+                <span class="text-nowrap">last Updated</span>
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
 
       <br><br>
