--- a/src/app/pages/district-wise-update/district-wise-update.component.html
+++ b/src/app/pages/district-wise-update/district-wise-update.component.html
@@ -3,7 +3,7 @@
     <div class="header-body">
       <div class="card">
         <div class="container-fluid text-center">
-          <h1 class="display-2 text-blue">Inida District Level Update</h1>
+          <h1 class="display-2 text-blue">India District Level Update</h1>
         </div>
         <div class="container">
           <div class="card-box" style="align-items: center">
