--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -61,7 +61,7 @@
                                 </a>
                               </div>
                               <!--Data-->
-                              <div class="item-box-blog-data" style="padding: px 15px;">
+                              <div class="item-box-blog-data" style="padding: 15px;">
                                 <p><i class="fa fa-user-o"></i> Admin, <i class="fa fa-comments-o"></i> Comments(3)</p>
                               </div>
                               <!--Text-->
