latest nascom update

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="row align-items-center justify-content-xl-between">
     <div class="col-xl-6">
       <div class="copyright text-center text-xl-left text-muted">
-        &copy; {{ test | date: "yyyy" }} <a href="https://mypclover.github.io/" class="font-weight-bold ml-1" target="_blank"> created By <strong>Citizen of India</strong></a>
+        &copy; {{ test | date: "yyyy" }} <a href="https://github.com/iamnaveenoff/" class="font-weight-bold ml-1" target="_blank"> created By <strong>Citizen of India</strong></a>
       </div>
     </div>
     <div class="col-xl-6">
@@ -12,7 +12,7 @@
           <a href="mailto:naveencreater106@gmail.com"><span class="text-success"><i class="far fa-paper-plane"></i></span> Report Bug / Feedback</a>
         </li>
         <li class="nav-item">
-          <a href="https://github.com/Mypclover/COVID-19-Tracker/blob/master/LICENSE"
+          <a href="https://github.com/iamnaveenoff/COVID-19-Tracker/blob/master/LICENSE"
              class="nav-link" target="_blank">MIT License</a>
         </li>
       </ul>
